# polyu-estudent-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-10-estudent-mcp-design.md
scripts/: analyze_detail.py  analyze_grades.py  analyze_search.py  probe_by_program.py  probe_login.py  probe_subject_search.py
src/estudent_mcp/: __init__.py  config.py  errors.py  models.py  registration.py  server.py  sniper.py
src/estudent_mcp/backend/: __init__.py  base.py  playwright_backend.py
src/estudent_mcp/parsers/: __init__.py  _tables.py  exams.py  grades.py  subjects.py  timetable.py
tests/: test_parsers.py  test_registration.py  test_sniper.py
tests/fixtures/: exam_sample.html  grades_sample.html  subject_detail_sample.html  subject_search_sample.html  subjects_sample.html  timetable_sample.html
