[project]
name = "estudent-mcp"
version = "0.1.0"
description = "MCP server for PolyU eStudent (grades, timetable, subject registration, course sniping)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "playwright>=1.44",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
estudent-mcp = "estudent_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estudent_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
